[package]
name = "arch_project"
version = "0.1.0"
edition = "2021"
description = "A decentralized polling system with creator-specific features"
authors = ["Your Name <your.email@example.com>"]
repository = "https://github.com/yourusername/arch_project"
license = "MIT"

[lib]
name = "arch_project"
crate-type = ["cdylib"]

[dependencies]
arch-network = { version = "0.1.0", features = ["program"] }
borsh = { version = "0.10", default-features = false }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort" 
